--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,7 @@
     <link
       rel="stylesheet"
       href="https://unpkg.com/ress@3.0.0/dist/ress.min.css"
+      crossorigin="anonymous"
     />
     <% if(htmlWebpackPlugin.options.local.ga) { %>
     <!-- Global site tag (gtag.js) - Google Analytics -->
