--- a/html/index.html
+++ b/html/index.html
@@ -2,16 +2,20 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>The Blue Eyes Red Monster</title>
+    <title>Logo Generator - The Blue Eyes Red Monster</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@uhyo_" />
-    <meta property="og:title" content="The Blue Eyes Red Monster" />
-    <!-- <meta
+    <meta
+      property="og:title"
+      content="Logo Generator - The Blue Eyes Red Monster"
+    />
+    <meta property="og:description" content="👁" />
+    <meta
       property="og:image"
-      content="https://type-puzzles.uhyohyo.net/og-image.png"
-    /> -->
-    <link rel="icon" href="/og-image.png" />
+      content="https://blue-eyes.uhyo.space/og-image.png"
+    />
+    <link rel="icon" href="/icon.png" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/ress@3.0.0/dist/ress.min.css"
