fix to use summary_large_image

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Logo Generator - The Blue Eyes Red Monster</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@uhyo_" />
     <meta
       property="og:title"
